BUGfix: GTK3&4 - spinbutton plus button cutting off rounded border

--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -1176,9 +1176,6 @@ StScrollBar {
 /* * * * * * * * * *
  * Menu (menu.js)  *
  * * * * * * * * * */
-.menu-decoration {
-  background: red; }
-
 .menu-favorites-box {
   padding: 10px;
   background-color: #131727;
