--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -4263,6 +4263,7 @@ spinbutton:not(.vertical) {
     padding-top: 0;
     color: #aeb2bc;
     background-image: none;
+    background-color: transparent;
     border-style: none none none solid;
     border-color: rgba(255, 255, 255, 0);
     border-radius: 0;
